fix horisontal align

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     margin: 10px 0px;
     border-left: 2px dotted gray;
     border-bottom: 2px dotted gray;
-    padding: 8px;
+    padding: 0px;
 }
 
 .value,
